concord_macros/tests/dsl/fail/fail_base_split_http.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client SplitHttpApi { base http "example.com" }
}

fn main() {}
